Added endpoints to get tickets and match tickets to the api
