# backend/routes/tickets.js
@@ -1,8 +1,17 @@
 const express = require('express');
+const auth = require('../middleware/auth');
 
 const router = express.Router();
 
-router.delete('/:ticket_id', (req, res) => {
+router.get('/', auth, async (req, res) => {
+  // TODO
+});
+
+router.get('/match_id', auth, async (req, res) => {
+  // TODO
+});
+
+router.delete('/:ticket_id', async (req, res) => {
   // TODO
 });
 
